(lang dune 3.4)

(name slc)

(generate_opam_files true)

(source
 (github jay-tux/slc))

(authors "Jay-tux")

(maintainers "Jay-tux")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name slc)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
